# Emergency-Alert-System

./: CMakeLists.txt  Makefile  README.md  vcpkg.json
include/: alert.h  contact.h  utils.h
src/: alert.c  contact.c  main.c  utils.c
